@@ -55,19 +55,19 @@ sponsor. <P>
 in a timely manner. <P>
 
 <LI> If it's a bug report that will prevent ACE or TAO from working on
-a major platform used by our sponsors we will fix it in a timely
-manner, as well. <P>
+a major platform used by our sponsors we'll try to fix it as time
+permits. <P>
 
 </OL>
 
 <LI> If it's a bug report that doesn't fall into the preceding three
-categories we will treat it like all other bug reports and assign it a
-tracking number and enter this into our <A
+categories, the submitter should enter it into our <A
 HREF="http://ace.cs.wustl.edu/bugzilla">bug tracking database</A> for
-future processing.  We will address these bugs as time permits.  If
-you'd like an immediate response, please contact <A
-HREF="mailto:schmidt@cs.wustl.edu">me</A> about becoming a sponsor or
-contact <A HREF="http://www.riverace.com">Riverace</a> or <A
+future processing.  We will address these bugs as time permits, but
+may not get to it for a while unless it affects our work or the work
+of our sponsors.  If you'd like an immediate response, please contact
+<A HREF="mailto:schmidt@cs.wustl.edu">me</A> about becoming a sponsor
+or contact <A HREF="http://www.riverace.com">Riverace</a> or <A
 HREF="http://www.theaceorb.com">OCI</A> for commercial support of ACE
 or TAO, respectively. <P>
 
