@@ -1,3 +1,10 @@
+Fri Aug 24 18:39:39 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>
+
+	* server/HTTP_Response.cpp (normal_response),
+	* server/HTTP_Helpers.cpp (HTTP_decode_base64): Use delete [] buf
+	  rather than delete buf.  Thanks to Don Hinton for reporting
+ 	  this.
+
 Thu Aug 16 09:57:15 2001  Balachandran Natarajan  <bala@cs.wustl.edu>
 
 	* */Makefile: Updated dependencies.
